all_deploy/canary/stable-service.yml
apiVersion: v1
kind: Service
metadata:
  name: module10-stable-service
  namespace: apps
spec:
  type: NodePort
  selector:
    app: aumit373/module10:v1.0   # selects both stable + canary
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
