all_deploy/canary/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module10-canary-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"  
spec:
  rules:
  - host: canary.local    # 👈 change to your desired host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: module10-canary-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: module10-canary-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "75"  
spec:
  rules:
  - host: canary.local    # 👈 change to your desired host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: module10-stable-service
            port:
              number: 80
